Made it possible to run as python script (no Jupyter). Documented in README.md

--- a/Canvas Batch Change Dates.ipynb
+++ b/Canvas Batch Change Dates.ipynb
@@ -12,10 +12,8 @@
     "\n",
     "There are only two places where you might need to change text in the 'cells' below. The API_URL below should be your institution url. Near the end there is a section 'Get Course List for Changes' - you can also change the name of the csv with the courses (although I recommend naming your file 'start_end_courses.csv' for consistency).\n",
     "\n",
-    "To Run:\n",
-    "Once you have confirmed all of the steps\n",
-    "\n",
-    "Kernel -> Run All"
+    "### To Run (once you have read all of the instructions):\n",
+    "**Kernel -> Restart & Run All**"
    ]
   },
   {
