rename functions more meaningful

--- a/Canvas Batch Change Dates.ipynb
+++ b/Canvas Batch Change Dates.ipynb
@@ -91,14 +91,14 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "from canvas_batch_change_dates import get_courses_df, update_multiple_courses\n",
+    "from canvas_batch_change_dates import get_courses_df, create_course_update_df\n",
     "\n",
     "# NOW is the time you made the update, not the time the csv is output\n",
     "NOW = datetime.now()\n",
     "\n",
     "courses_df = get_courses_df('data/input/start_end_courses.csv')\n",
     "\n",
-    "details = update_multiple_courses(courses_df, restrict_participation_to_dates)\n",
+    "details = create_course_update_df(courses_df, restrict_participation_to_dates)\n",
     "\n",
     "print('\\nTotal Courses: {}\\n'.format(len(details)))\n",
     "display(details)"
