Get course info (#12)
* rename functions more meaningful

* create function to get courses from subaccount

* create function to get course info from subaccount

* add function to get info based on subaccount

--- a/Canvas Batch Change Dates.ipynb
+++ b/Canvas Batch Change Dates.ipynb
@@ -41,6 +41,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1. b) Create a course file from subaccount\n",
+    "\n",
+    "TO BE IMPLEMENTED"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Fill out Input CSV\n",
     "1. You should have a csv called `courses_start_end.csv` in `data/input` that has the columns **course_id**, **start_date**, and **end_date** with a list of courses that you want to apply changes to.\n",
     "1. Please ensure the dates are formatted as **YYYY-MM-DD** or **YYYY-MM-DD HH:MM** in your file. If you have used Excel, the columns should be formatted as a \"Short Date\" (YYYY-MM-DD) or \"Long Date\" (YYYY-MM-DD HH:MM). \n",
@@ -91,14 +100,14 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "from canvas_batch_change_dates import get_courses_df, update_multiple_courses\n",
+    "from canvas_batch_change_dates import get_courses_df, create_course_update_df\n",
     "\n",
     "# NOW is the time you made the update, not the time the csv is output\n",
     "NOW = datetime.now()\n",
     "\n",
     "courses_df = get_courses_df('data/input/start_end_courses.csv')\n",
     "\n",
-    "details = update_multiple_courses(courses_df, restrict_participation_to_dates)\n",
+    "details = create_course_update_df(courses_df, restrict_participation_to_dates)\n",
     "\n",
     "print('\\nTotal Courses: {}\\n'.format(len(details)))\n",
     "display(details)"
@@ -140,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
