update instructions and gitkeep for template

--- a/Canvas Batch Change Dates.ipynb
+++ b/Canvas Batch Change Dates.ipynb
@@ -24,9 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Canvas API Token: ········\n",
+      "\u001b[32m\n",
+      "Token Valid\u001b[0m\n",
+      "\u001b[34m\n",
+      "Hello Alison\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from canvas_batch_change_dates import initialize\n",
     "\n",
@@ -47,14 +59,15 @@
    "metadata": {},
    "source": [
     "## 2. Fill out Input CSV\n",
-    "1. You should have a csv called `courses_start_end.csv` in `data/input` that has the columns **course_id**, **start_date**, and **end_date** with a list of courses that you want to apply changes to.\n",
+    "1. You should have a csv called `start_end_courses-template.csv` in `data/input` that has the columns **course_id**, **start_date**, and **end_date**.\n",
+    "1. Create a copy of this file called `start_end_courses.csv` and add your course information to it. Please leave the template file empty.\n",
     "1. Please ensure the dates are formatted as **YYYY-MM-DD** or **YYYY-MM-DD HH:MM** in your file. If you have used Excel, the columns should be formatted as a \"Short Date\" (YYYY-MM-DD) or \"Long Date\" (YYYY-MM-DD HH:MM). \n",
     "    * The script assumes that the dates are for Vancouver\n",
     "    * The start_date will assume the time of start is 12:00am that day\n",
     "    * The end_date will assume the time of end is 11:59pm that day\n",
     "\n",
     "\n",
-    "Once you have completed the script, **start_end_courses.csv** will be copied to the `/completed` folder and timestamped in the filename.\n"
+    "Once you have completed the script, `start_end_courses.csv` will be copied to the `/completed` folder and timestamped in the filename.\n"
    ]
   },
   {
@@ -72,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +104,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSuccessfully loaded csv file\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course_id</th>\n",
+       "      <th>course_name</th>\n",
+       "      <th>note</th>\n",
+       "      <th>start_at_og</th>\n",
+       "      <th>start_at_new</th>\n",
+       "      <th>end_at_og</th>\n",
+       "      <th>end_at_new</th>\n",
+       "      <th>restrict_enrol_og</th>\n",
+       "      <th>restrict_enrol_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10456</td>\n",
+       "      <td>Alison Myers Sandbox</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2018-09-21T18:49:42Z</td>\n",
+       "      <td>2015-09-01 12:00:00 AM PDT-0700</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2032-01-01 11:59:59 PM PST-0800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   course_id           course_name note           start_at_og  \\\n",
+       "0      10456  Alison Myers Sandbox   OK  2018-09-21T18:49:42Z   \n",
+       "\n",
+       "                      start_at_new end_at_og                       end_at_new  \\\n",
+       "0  2015-09-01 12:00:00 AM PDT-0700      None  2032-01-01 11:59:59 PM PST-0800   \n",
+       "\n",
+       "   restrict_enrol_og  restrict_enrol_new  \n",
+       "0              False                True  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Would you like to try to update the above? (y/n)\n",
+      "y\n",
+      "\u001b[32m\n",
+      "10456 course updated successfully\u001b[0m\n",
+      "\n",
+      "Total Courses: 1\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>course_id</th>\n",
+       "      <th>course_name</th>\n",
+       "      <th>change_success</th>\n",
+       "      <th>change_message</th>\n",
+       "      <th>note</th>\n",
+       "      <th>start_at_og</th>\n",
+       "      <th>start_at_new</th>\n",
+       "      <th>end_at_og</th>\n",
+       "      <th>end_at_new</th>\n",
+       "      <th>restrict_enrol_og</th>\n",
+       "      <th>restrict_enrol_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10456</td>\n",
+       "      <td>Alison Myers Sandbox</td>\n",
+       "      <td>True</td>\n",
+       "      <td>course updated</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2018-09-21T18:49:42Z</td>\n",
+       "      <td>2015-09-01 12:00:00 AM PDT-0700</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2032-01-01 11:59:59 PM PST-0800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   course_id           course_name  change_success  change_message note  \\\n",
+       "0      10456  Alison Myers Sandbox            True  course updated   OK   \n",
+       "\n",
+       "            start_at_og                     start_at_new end_at_og  \\\n",
+       "0  2018-09-21T18:49:42Z  2015-09-01 12:00:00 AM PDT-0700      None   \n",
+       "\n",
+       "                        end_at_new  restrict_enrol_og  restrict_enrol_new  \n",
+       "0  2032-01-01 11:59:59 PM PST-0800              False                True  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "from canvas_batch_change_dates import get_courses_df, create_course_update_df\n",
@@ -119,9 +283,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDetails:\u001b[0m\n",
+      "    CSV NAME: \"canvas_course_settings_2021-01-12 14.18.51.csv\"\"\n",
+      "    OUTPUT FOLDER: \"data/output\"\n",
+      "\n",
+      "Do you want to generate the csv with these details? (y/n): y\n",
+      "\u001b[32m\n",
+      "\"canvas_course_settings_2021-01-12 14.18.51.csv\" CREATED IN \"data/output\"\u001b[0m\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "from canvas_batch_change_dates import output_csv\n",
     "\n",
